RESOLVED FIXED273632
AX: accessibility/element-reflection-ariaowns.html times out in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=273632
Summary AX: accessibility/element-reflection-ariaowns.html times out in isolated tree...
Andres Gonzalez
Reported 2024-05-02 10:32:46 PDT
.
Attachments
Patch (2.88 KB, patch)
2024-05-02 10:39 PDT, Andres Gonzalez
no flags
Patch (5.57 KB, patch)
2024-05-03 05:40 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2024-05-02 10:32:58 PDT
Andres Gonzalez
Comment 2 2024-05-02 10:39:15 PDT
EWS
Comment 3 2024-05-02 21:26:21 PDT
Found 1 new test failure: accessibility/aria-owns-hierarchy-remap.html
Andres Gonzalez
Comment 4 2024-05-03 05:40:47 PDT
EWS
Comment 5 2024-05-03 08:01:50 PDT
Committed 278322@main (fcd15cc132a5): <https://commits.webkit.org/278322@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471265 [details].
Note You need to log in before you can comment on or make changes to this bug.