AX: accessibility/element-reflection-ariaowns.html times out in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=273632 <rdar://problem/127439299>

Reviewed by Tyler Wilcock.

The cause of the problem is that the parent of the newly owned object needs to be notified that one of its children is removed. There was an attempt to do this by notifying a previous owner of the owned object, but that wasn't enough because it doesn't work for targets that were not previously owned.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* LayoutTests/accessibility/aria-owns-hierarchy-remap-expected.txt:
* LayoutTests/accessibility/aria-owns-hierarchy-remap.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::addRelation):

Canonical link: https://commits.webkit.org/278322@main